sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:8: error: illegal start of simple expression
		while(j>0 && j-1>temp)){
                                      ^