sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
	
	for(i<-1 to getNombreValeurs()-2)
	{
		val temp=getValeur(i)
		var j=i
		while(j>0 && j-1>temp)){
			setValeur(j,getValeur(j-1))
			j=j-1
		}
		setValeur(j,temp)
	}
}
